compiler/testData/diagnostics/tests/multiplatform/checkNoActualForExpectInLastModule.kt
// RUN_PIPELINE_TILL: FIR2IR
// ISSUE: KT-58483
// MODULE: common
expect class <!NO_ACTUAL_FOR_EXPECT{JVM}!>A<!>

// MODULE: platform()()(common)
